# DocsIngestionApi

./: .dockerignore  .gitignore  Asistente virtual_Base de datos - UNIR México 03_04_2025.xlsx  Dockerfile  README.md  main.py  profile.json  pyproject.toml
assets/real_user_questions/: qdrant_data_export.json
prompts/: system_prompt_refiner_node.md  user_prompt_refiner_node.md
src/: __init__.py
src/abstractions/: __init__.py  client_interfaces.py  controller_protocols.py  framework_interfaces.py
src/application/: __init__.py  client_setup.py  config.yaml  graph_constructor.py  graph_nodes.py  graph_orchestrator.py  graph_tuple_nodes.py
src/application/doc_extractor/: word_extractor.py
src/application/llm_qa/: llm_generation_functions.py
src/client/: __init__.py  implementations.py
src/controllers/: __init__.py  api_endpointfuncs.py  frameworks.py  specs.py
src/models/: __init__.py  graph_workflow_schemas.py  query_filters_schemas.py  response_schemas.py  security_schemas.py  specs_schemas.py  validation_schemas.py
src/prompts/: system_prompt_evaluator_node.md  system_prompt_generator_node.md  user_prompt_evaluator_node.md  user_prompt_generator_node.md
src/security/: __init__.py  api_keys.py  azure_secrets.py  secrets.py
src/utils/: __init__.py  loggers.py  utilities.py
test/test_fastapi_framework/: test_fastapi_framework.py
test/test_qdrant_client/: conftest.py  test_batch_query.py  test_create_collections.py  test_dense_search.py  test_get_collection_info.py  test_private_methods.py  test_qdrant_client.py  test_upload_documents.py  test_verify_upload.py
