[project]
name = "ingesta-documental-bc"
version = "0.1.0"
description = "FastAPI API for processing Word documents into Q&A pairs using OpenAI and storing them in Qdrant"
requires-python = "==3.12.*"
dependencies = [
    "aiohttp>=3.12.0", # base para el cliente asíncrono para qdrant
    "dotenv>=0.9.9", # manejo secretos
    "fastapi[standard]>=0.115.12", # implementación concreta de las abstracciones
    "fastexcel>=0.14.0",
    "langchain>=0.3.25", #llm app_framework framework para diseñar el extractor de q&a en el word
    "langchain-unstructured>=0.1.6", #wrapper en torno a la librería unstructured.
    "langgraph>=0.4.5", # framework para grafos que dirigen el flujo de pensamiento del LLM.
    "notebook>=7.4.3",
    "openai>=1.81.0", #Motor del llm que vamos a usar
    "polars>=1.30.0", # librería de manipulación de datos (posible eliminación)
    "pydantic>=2.11.4", # Sistema de tipos seguros para la api
    "requests>=2.32.3", # posible eliuminación
    "unstructured-client>=0.35.0", # cliente para el servcicio de unestructured
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "mypy>=1.15.0", # type hints
    "pytest>=8.3.5", # testeos para dev
    "pytest-asyncio>=1.0.0",
    "specialist>=0.7.0", # especializador del bytecode para mejorar el código en situaciones de necesaria optimización.
]
production = [
    "aioresponses>=0.7.8",
    "pytest>=8.3.5", #testeos en producción
    "pytest-asyncio>=1.0.0",
    "scalene>=1.5.51", # profiler para producción.
    "specialist>=0.7.0", # especializador del bytecode para mejorar el código en situaciones de necesaria optimización.
]
